--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,org.vaadin.marcus
 spring.jpa.defer-datasource-initialization = true
+vaadin.frontend.hotdeploy=true
+
+## Web Push
+# Run `npx web-push generate-vapid-keys` and define the keys.
+# Better: set them in `config/local/application.properties`, so they don't end up in Git
+#vapid.public.key=
+#vapid.private.key=
