--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "@vaadin/app-layout": "24.0.0-rc1",
     "@vaadin/avatar": "24.0.0-rc1",
     "@vaadin/avatar-group": "24.0.0-rc1",
-    "@vaadin/board": "24.0.0-rc1",
     "@vaadin/bundles": "24.0.0-rc1",
     "@vaadin/button": "24.0.0-rc1",
-    "@vaadin/charts": "24.0.0-rc1",
     "@vaadin/checkbox": "24.0.0-rc1",
     "@vaadin/checkbox-group": "24.0.0-rc1",
     "@vaadin/combo-box": "24.0.0-rc1",
@@ -18,8 +16,6 @@
     "@vaadin/component-base": "24.0.0-rc1",
     "@vaadin/confirm-dialog": "24.0.0-rc1",
     "@vaadin/context-menu": "24.0.0-rc1",
-    "@vaadin/cookie-consent": "24.0.0-rc1",
-    "@vaadin/crud": "24.0.0-rc1",
     "@vaadin/custom-field": "24.0.0-rc1",
     "@vaadin/date-picker": "24.0.0-rc1",
     "@vaadin/date-time-picker": "24.0.0-rc1",
@@ -30,7 +26,6 @@
     "@vaadin/field-highlighter": "24.0.0-rc1",
     "@vaadin/form-layout": "24.0.0-rc1",
     "@vaadin/grid": "24.0.0-rc1",
-    "@vaadin/grid-pro": "24.0.0-rc1",
     "@vaadin/horizontal-layout": "24.0.0-rc1",
     "@vaadin/icon": "24.0.0-rc1",
     "@vaadin/icons": "24.0.0-rc1",
@@ -40,7 +35,6 @@
     "@vaadin/list-box": "24.0.0-rc1",
     "@vaadin/lit-renderer": "24.0.0-rc1",
     "@vaadin/login": "24.0.0-rc1",
-    "@vaadin/map": "24.0.0-rc1",
     "@vaadin/menu-bar": "24.0.0-rc1",
     "@vaadin/message-input": "24.0.0-rc1",
     "@vaadin/message-list": "24.0.0-rc1",
@@ -52,7 +46,6 @@
     "@vaadin/polymer-legacy-adapter": "24.0.0-rc1",
     "@vaadin/progress-bar": "24.0.0-rc1",
     "@vaadin/radio-group": "24.0.0-rc1",
-    "@vaadin/rich-text-editor": "24.0.0-rc1",
     "@vaadin/router": "1.7.4",
     "@vaadin/scroller": "24.0.0-rc1",
     "@vaadin/select": "24.0.0-rc1",
@@ -73,8 +66,7 @@
     "@vaadin/virtual-list": "24.0.0-rc1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.6.1",
-    "proj4": "2.8.1"
+    "lit": "2.6.1"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "5.0.2",
@@ -99,10 +91,8 @@
       "@vaadin/app-layout": "24.0.0-rc1",
       "@vaadin/avatar": "24.0.0-rc1",
       "@vaadin/avatar-group": "24.0.0-rc1",
-      "@vaadin/board": "24.0.0-rc1",
       "@vaadin/bundles": "24.0.0-rc1",
       "@vaadin/button": "24.0.0-rc1",
-      "@vaadin/charts": "24.0.0-rc1",
       "@vaadin/checkbox": "24.0.0-rc1",
       "@vaadin/checkbox-group": "24.0.0-rc1",
       "@vaadin/combo-box": "24.0.0-rc1",
@@ -110,8 +100,6 @@
       "@vaadin/component-base": "24.0.0-rc1",
       "@vaadin/confirm-dialog": "24.0.0-rc1",
       "@vaadin/context-menu": "24.0.0-rc1",
-      "@vaadin/cookie-consent": "24.0.0-rc1",
-      "@vaadin/crud": "24.0.0-rc1",
       "@vaadin/custom-field": "24.0.0-rc1",
       "@vaadin/date-picker": "24.0.0-rc1",
       "@vaadin/date-time-picker": "24.0.0-rc1",
@@ -122,7 +110,6 @@
       "@vaadin/field-highlighter": "24.0.0-rc1",
       "@vaadin/form-layout": "24.0.0-rc1",
       "@vaadin/grid": "24.0.0-rc1",
-      "@vaadin/grid-pro": "24.0.0-rc1",
       "@vaadin/horizontal-layout": "24.0.0-rc1",
       "@vaadin/icon": "24.0.0-rc1",
       "@vaadin/icons": "24.0.0-rc1",
@@ -132,7 +119,6 @@
       "@vaadin/list-box": "24.0.0-rc1",
       "@vaadin/lit-renderer": "24.0.0-rc1",
       "@vaadin/login": "24.0.0-rc1",
-      "@vaadin/map": "24.0.0-rc1",
       "@vaadin/menu-bar": "24.0.0-rc1",
       "@vaadin/message-input": "24.0.0-rc1",
       "@vaadin/message-list": "24.0.0-rc1",
@@ -144,7 +130,6 @@
       "@vaadin/polymer-legacy-adapter": "24.0.0-rc1",
       "@vaadin/progress-bar": "24.0.0-rc1",
       "@vaadin/radio-group": "24.0.0-rc1",
-      "@vaadin/rich-text-editor": "24.0.0-rc1",
       "@vaadin/router": "1.7.4",
       "@vaadin/scroller": "24.0.0-rc1",
       "@vaadin/select": "24.0.0-rc1",
@@ -165,8 +150,7 @@
       "@vaadin/virtual-list": "24.0.0-rc1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.6.1",
-      "proj4": "2.8.1"
+      "lit": "2.6.1"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.2",
@@ -184,7 +168,7 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "85160887ccb9413f14724bc1cba0ac8dd7e45bda3ff1dc950152a614836857ab"
+    "hash": "6344209669969d2cdf793fd363d25a83b0c12118444890c8304098210e5208fc"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -246,18 +230,10 @@
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
     "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
     "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@vaadin/board": "$@vaadin/board",
-    "@vaadin/charts": "$@vaadin/charts",
-    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
-    "@vaadin/crud": "$@vaadin/crud",
-    "@vaadin/grid-pro": "$@vaadin/grid-pro",
-    "@vaadin/map": "$@vaadin/map",
-    "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
-    "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "date-fns": "$date-fns"
   }
