Update readme on storing secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ vaadin.frontend.hotdeploy=true
 
 ## Web Push
 # Run `npx web-push generate-vapid-keys` and define the keys.
-# Better: set them in `config/local/application.properties`, so they don't end up in Git
-#vapid.public.key=
-#vapid.private.key=
+# NOTE: define these as environment variables to avoid committing them to Git.
+#vapid.public.key=[public key]
+#vapid.private.key=[private key]
+#vapid.subject=[mailto:your@email.com OR https://your-website.com]
